Добавлен sprite.svg

--- a/index.html
+++ b/index.html
@@ -92,6 +92,36 @@
                      <h3 class="team-undertitle">Игорь Демьяненко</h3>
                      <p class="team-undertitle-description">Product Designer</p>
                  </li>
+                 <ul class="social-list list">
+                     <li class="social-list_item">
+                         <a class="social-list_link" href="">
+                             <svg class="social-list_icon">
+                                 <use href="./Images/sprite.svg#icon-instagram"></use>
+                             </svg>
+                         </a>
+                    </li>
+                     <li class="social-list_item">
+                         <a class="social-list_link" href="">
+                             <svg class="social-list_icon">
+                                 <use href="./Images/sprite.svg#icon-twitter"></use>
+                             </svg>
+                         </a>
+                    </li>
+                     <li class="social-list_item">
+                         <a class="social-list_link" href="">
+                             <svg class="social-list_icon">
+                                 <use href="./Images/sprite.svg#icon-facebook"></use>
+                             </svg>
+                         </a>
+                    </li>
+                     <li class="social-list_item">
+                         <a class="social-list_link" href="">
+                             <svg class="social-list_icon">
+                                 <use href="./Images/sprite.svg#icon-linkedins"></use>
+                             </svg>
+                         </a>
+                    </li>
+                 </ul>
                  <li class="team-title-item">
                      <img class="team-image"  src="./Images/team/team-img-2.jpg" alt="Ольга Репина" width="270" height="262">
                      <h3 class="team-undertitle">Ольга Репина</h3>
