--- a/portfolio.html
+++ b/portfolio.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <header class="header">
-        <div class="container">
+<header class="header">
+    <div class="container">
         <nav class="site-nav">
             <a class="logo link" href="/" aria-label="логотип сайта" lang="en"><span class="logo-blue-color">Web</span><span class="logo-black-color">Studio</span></a>
             <ul class="nav-list list">
@@ -23,18 +23,28 @@
                 <li class="nav-list-item">
                     <a class="nav-list-link link" href="#">Контакты</a></li>
             </ul>
-            </nav>
-            <address class="address-menu-header">
-                <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a class="header-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </address>
-        </div>
-        </header>
-    
-    <main>
-        <!-- Portfolio-->
-        <section class="portfolio">
-            <div class="container">
+        </nav>
+        <address class="address-menu-header">
+            <a class="header-mail link" href="mailto:info@devstudio.com">
+                <svg class="envelope-icon">
+                    <use href="./Images/symbol-defs.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com
+            </a>
+            <a class="header-tel link" href="tel:+380961111111">
+                <svg class="smartphone-icon">
+                    <use href="./Images/symbol-defs.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11
+            </a>
+        </address>
+    </div>
+</header>
+
+<main>
+    <!-- Portfolio-->
+    <section class="portfolio">
+        <div class="container">
             <ul class="section-list list">
                 <li class="section-list-item">
                     <button class="section-list-btn selected">Все</button>
@@ -53,11 +63,11 @@
                 </li>
             </ul>
         </div>
-        </section>
+    </section>
 
-        <!-- Projects -->
-        <section class="projects">
-            <div class="container">
+    <!-- Projects -->
+    <section class="projects">
+        <div class="container">
             <ul class="projects-list list">
                 <li class="projects-list-item">
                     <img class="projects-list-img" src="./Images/projects/projects-img-1.jpg" alt="Три специалиста студии" width="370" height="294">
@@ -106,25 +116,73 @@
                 </li>
             </ul>
         </div>
-        </section>
-    </main>
-    
-    <!-- Contact information -->
-    <footer class="footer">
-        <div class="container">
-        <a class="logo link" href="/" aria-label="логотип сайта" lang="en"><span class="logo-blue-color">Web</span><span class="logo-white-color">Studio</span></a>
-        <address class="address-menu-footer">
-            <ul class="address-list list">
-                <li class="address-list-item first"><a class="link" href="https://goo.gl/maps/zoHN5voJTTpqKFqRA" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
-               </li>
-                <li class="address-list-item"><a class="link" href="mailto:info@example.com">info@example.com</a>
-               </li>
-                <li class="address-list-item"><a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
-               </li>
+    </section>
+</main>
+
+<!-- Contact information -->
+<footer class="footer">
+    <div class="container">
+        <div class="footer-container">
+            <a class="logo link" href="/" aria-label="логотип сайта" lang="en">
+                <span class="logo-blue-color">Web</span>
+                <span class="logo-white-color">Studio</span>
+            </a>
+            <address class="address-menu-footer">
+                <ul class="address-list list">
+                    <li class="address-list-item first">
+                        <a class="link" href="https://goo.gl/maps/zoHN5voJTTpqKFqRA" target="_blank">
+                            г. Киев, пр-т Леси Украинки, 26
+                        </a>
+                    </li>
+                    <li class="address-list-item">
+                        <a class="link" href="mailto:info@example.com">
+                            info@example.com
+                        </a>
+                    </li>
+                    <li class="address-list-item">
+                        <a class="link" href="tel:+380991111111">
+                            +38 099 111 11 11
+                        </a>
+                    </li>
+                </ul>
+            </address>
+        </div>
+
+        <div class="footer-container">
+            <h4>Присоединяйтесь</h4>
+            <ul class="join-list list">
+                <li>
+                    <a href="">
+                        <svg>
+                            <use href="./Images/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <svg>
+                            <use href="./Images/symbol-defs.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <svg>
+                            <use href="./Images/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <svg>
+                            <use href="./Images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
             </ul>
-        </address>
+        </div>
     </div>
-    </footer>
+</footer>
 
 </body>
 </html>
