--- a/portfolio.html
+++ b/portfolio.html
@@ -149,7 +149,7 @@
         </div>
 
         <div class="footer-container">
-            <h4>Присоединяйтесь</h4>
+            <h4 class="footer-title">Присоединяйтесь</h4>
             <ul class="join-list list">
                 <li>
                     <a href="">
