--- a/index.html
+++ b/index.html
@@ -358,28 +358,28 @@
         <div class="footer-container">
             <h4 class="footer-title">Присоединяйтесь</h4>
             <ul class="join-list list">
-                <li>
+                <li class="join-list-item">
                     <a href="">
                         <svg>
                             <use href="./Images/symbol-defs.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
-                <li>
+                <li class="join-list-item">
                     <a href="">
                         <svg>
                             <use href="./Images/symbol-defs.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
-                <li>
+                <li class="join-list-item">
                     <a href="">
                         <svg>
                             <use href="./Images/symbol-defs.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
-                <li>
+                <li class="join-list-item">
                     <a href="">
                         <svg>
                             <use href="./Images/symbol-defs.svg#icon-linkedin"></use>
