Добавлен фокус карточкам/ изменен цвет элементов в Студии

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,47 +69,47 @@
     <section class="projects">
         <div class="container">
             <ul class="projects-list list">
-                <li class="projects-list-item">
+                <li class="projects-list-item" tabIndex="0">
                     <img class="projects-list-img" src="./Images/projects/projects-img-1.jpg" alt="Три специалиста студии" width="370" height="294">
                     <h3 class="projects-title">Технокряк</h3>
                     <p class="projects-title-description">Веб-сайт</p>
                 </li>
-                <li class="projects-list-item">
+                <li class="projects-list-item" tabIndex="0">
                     <img class="projects-list-img" src="./Images/projects/projects-img-2.jpg" alt="Два футбольных игрока" width="370" height="294">
                     <h3 class="projects-title">Постер New Orlean vs Golden Star</h3>
                     <p class="projects-title-description">Дизайн</p>
                 </li>
-                <li class="projects-list-item">
+                <li class="projects-list-item" tabIndex="0">
                     <img class="projects-list-img" src="./Images/projects/projects-img-3.jpg" alt="Лого ресторана" width="370" height="294">
                     <h3 class="projects-title">Ресторан Seafood</h3>
                     <p class="projects-title-description">Приложение</p>
                 </li>
-                <li class="projects-list-item">
+                <li class="projects-list-item" tabIndex="0">
                     <img class="projects-list-img" src="./Images/projects/projects-img-4.jpg" alt="Наушники" width="370" height="294">
                     <h3 class="projects-title">Проект Prime</h3>
                     <p class="projects-title-description">Маркетинг</p>
                 </li>
-                <li class="projects-list-item">
+                <li class="projects-list-item" tabIndex="0">
                     <img class="projects-list-img" src="./Images/projects/projects-img-5.jpg" alt="Две маленькие коробочки" width="370" height="294">
                     <h3 class="projects-title">Проект Boxes</h3>
                     <p class="projects-title-description">Приложение</p>
                 </li>
-                <li class="projects-list-item">
+                <li class="projects-list-item" tabIndex="0">
                     <img class="projects-list-img" src="./Images/projects/projects-img-6.jpg" alt="Монитор экрана" width="370" height="294">
                     <h3 class="projects-title">Inspiration has no Borders</h3>
                     <p class="projects-title-description">Веб-сайт</p>
                 </li>
-                <li class="projects-list-item">
+                <li class="projects-list-item" tabIndex="0">
                     <img class="projects-list-img" src="./Images/projects/projects-img-7.jpg" alt="Открытый журнал" width="370" height="294">
                     <h3 class="projects-title">Издание Limited Edition</h3>
                     <p class="projects-title-description">Дизайн</p>
                 </li>
-                <li class="projects-list-item">
+                <li class="projects-list-item" tabIndex="0">
                     <img class="projects-list-img" src="./Images/projects/projects-img-8.jpg" alt="Бейджик проекта" width="370" height="294">
                     <h3 class="projects-title">Проект LAB</h3>
                     <p class="projects-title-description">Маркетинг</p>
                 </li>
-                <li class="projects-list-item">
+                <li class="projects-list-item" tabIndex="0">
                     <img class="projects-list-img" src="./Images/projects/projects-img-9.jpg" alt="Специалист работающий за ноутбуком" width="370" height="294">
                     <h3 class="projects-title">Growing Business</h3>
                     <p class="projects-title-description">Приложение</p>
